# molio

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README  README.md  THIRD_PARTY_NOTICES.md  structure.xyz
.github/workflows/: check.yml  scheduled.yml  test.yml
benches/: amber.rs  my_benchmark.rs  pdb.rs  sdf.rs  tng.rs  xyz.rs
benchmark_chem/: README.md  run_benchmark.sh  run_flamegraph.sh
benchmark_chem/cpp/: compile.sh  read_chem.cpp
src/: angle.rs  atom.rs  bond.rs  connectivity.rs  dihedral.rs  error.rs  extendedxyzparser.rs  format.rs  formats.rs  frame.rs  improper.rs  lib.rs  main.rs  property.rs  residue.rs  topology.rs  trajectory.rs  unit_cell.rs
src/formats/: amber.rs  pdb.rs  pdb_connectivity.rs  sdf.rs  smi.rs  tng.rs  xtc.rs  xyz.rs
src/tests-data/amber/: 7OAP_BA4_dry.parm7  7OAP_BA4_dry_no_atomic_number.parm7
src/tests-data/netcdf/: no-cell.nc  scaled_traj.nc  water.ncrst
src/tests-data/sdf/: aspirin.sdf  aspirin_charged.sdf  bad-atom-line.sdf  count-line-not-numbers.sdf  count-line-too-short.sdf
src/tests-data/smi/: bad_paren.smi  bad_percentage_sign.smi  bad_ring.smi  bad_symbol.smi  chiral.smi  details.smi  issue_303.smi  misplaced_property.smi  rdkit_problems.smi  spaces.smi  test.smi  ugly.smi
src/tests-data/tng/: 1vln-triclinic.tng  cobrotoxin.tng  water.tng
src/tests-data/xyz/: bad_extended.xyz  extended.xyz  single_struct.xyz
