[package]
name = "molio"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
nalgebra = "0.33"
assert_approx_eq = "1.1.0"
phf = { version = "0.11", features = ["macros"]}
fast-float = "0.2"
smallvec = "1.15"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"]}

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
# debug = false
strip = "symbols"
