[package]
name = "molio"
version = "0.1.0"
edition = "2021"
description = "A library for reading chemical file formats"
readme = "README.md"
repository = "https://github.com/chem-william/molio"
license = "BSD-3-Clause"
keywords = ["chemistry"]
categories = ["text-processing", "science", "parser-implementations"]

[dependencies]
thiserror = "2.0.12"
nalgebra = "0.33.2"
assert_approx_eq = "1.1.0"
phf = { version = "0.11.3", features = ["macros"]}
tempfile = "3.19.1"
log = "0.4.27"
yowl = "0.3.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"]}

# to appease -Zminimal-version
serde = { version = "1.0.100" }
regex = { version = "1.5.6" }

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
# debug = false
strip = "symbols"

[lints.clippy]
single_char_pattern = "warn"
uninlined_format_args = "warn"
map_unwrap_or = "warn"
inefficient_to_string = "warn"
